Detalles text white

--- a/foro.html
+++ b/foro.html
@@ -147,7 +147,7 @@
                   rerum velit hic quibusdam sequi, facere eveniet?
                 </p>
                 <p class="card-text">
-                  <small class="text-dark">Enviado hace 1 hora</small>
+                  <small class="text-light">Enviado hace 1 hora</small>
                 </p>
               </div>
             </div>
@@ -199,7 +199,7 @@
         </div>
       </div>
       <div class="collapse ml-5" id="comentarios">
-        <div class="card mb-3 bg-secondary">
+        <div class="card mb-3 bg-secondary text-white">
           <div class="row p-2">
             <div class="col-md-1 d-flex align-items-center">
               <img
@@ -221,7 +221,7 @@
                   rerum velit hic quibusdam sequi, facere eveniet?
                 </p>
                 <p class="card-text">
-                  <small class="text-dark">Enviado hace 1 minuto</small>
+                  <small class="text-light">Enviado hace 1 minuto</small>
                 </p>
               </div>
             </div>
